fix path to requirements

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           python-version: "3.11"
       - run: npm install -g aws-cdk
-      - run: pip install -r cdk/requirements.txt
+      - run: pip install -r infra/cdk/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v2
