--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           python-version: "3.11"
       - run: npm install -g aws-cdk
+      - run: pip install -r infra/requirements.txt
       - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
@@ -66,6 +67,7 @@ jobs:
         with:
           python-version: "3.11"
       - run: npm install -g aws-cdk
+      - run: pip install -r infra/requirements.txt
       - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
