--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,13 +46,10 @@ jobs:
 
       - name: Deploy Preview Stack
         run: |
-          to_pascal_case() {
-            echo "$1" | sed -r 's/(^|_)([a-z])/\U\2/g'
-          }
-
-          SERVICE_NAME="user_service"
-          STACK_NAME="$(to_pascal_case "$SERVICE_NAME")Stack-pr-${PR_NUMBER}"
-
+          SERVICE_NAME={{matrix.service}}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' '{ for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); OFS=""; print }')
+          STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+          
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" | sed 's/_/-/g' | awk '{print toupper(substr($0,1,1)) substr($0,2)}')Stack-pr-${{ env.PR_NUMBER }} \
             --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
@@ -86,13 +83,10 @@ jobs:
 
       - name: Deploy Production Stack
         run: |
-          to_pascal_case() {
-            echo "$1" | sed -r 's/(^|_)([a-z])/\U\2/g'
-          }
-
-          SERVICE_NAME="user_service"
-          STACK_NAME="$(to_pascal_case "$SERVICE_NAME")Stack-pr-${PR_NUMBER}"
-
+          SERVICE_NAME={{matrix.service}}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' '{ for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); OFS=""; print }')
+          STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+          
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" | sed 's/_/-/g' | awk '{print toupper(substr($0,1,1)) substr($0,2)}')Stack-prod \
             --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
