--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Deploy Preview Stack
         run: |
           SERVICE_NAME=${{matrix.service}}
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' '{ for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); OFS=""; print }')
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
           
           echo "Deploying stack: $STACK_NAME"
@@ -84,7 +84,7 @@ jobs:
       - name: Deploy Production Stack
         run: |
           SERVICE_NAME=${{matrix.service}}
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' '{ for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); OFS=""; print }')
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-prod"
           
           echo "Deploying stack: $STACK_NAME"
