--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,22 +24,30 @@ jobs:
       changed_services: ${{ steps.set.outputs.changed }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Fetch base branch
+        run: git fetch origin main
 
       - id: set
         run: |
-          changed=$(git diff --name-only origin/main...HEAD | grep -Eo 'services/[^/]+|infra/cdk/stacks/[^/]+' | cut -d '/' -f2 | sort -u | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          changed=$(git diff --name-only origin/main...HEAD | \
+            grep -Eo 'services/[^/]+|infra/cdk/stacks/[^/]+' | \
+            cut -d '/' -f2 | \
+            sort -u | \
+            jq -R -s -c 'split("\n") | map(select(length > 0))')
           echo "changed=$changed" >> $GITHUB_OUTPUT
 
   deploy-pr:
-    needs: detect-changes
     if: github.event_name == 'pull_request'
+    needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
         service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
-
     steps:
       - uses: actions/checkout@v4
 
@@ -49,7 +57,7 @@ jobs:
           python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt || true
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -62,7 +70,6 @@ jobs:
           SERVICE_NAME=${{ matrix.service }}
           PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
-
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
             --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
@@ -71,13 +78,12 @@ jobs:
             --require-approval never
 
   deploy-prod:
-    needs: detect-changes
     if: github.ref == 'refs/heads/main'
+    needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
         service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
-
     steps:
       - uses: actions/checkout@v4
 
@@ -87,7 +93,7 @@ jobs:
           python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt || true
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -100,7 +106,6 @@ jobs:
           SERVICE_NAME=${{ matrix.service }}
           PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-prod"
-
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
             --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
@@ -108,20 +113,24 @@ jobs:
             --require-approval never
 
   destroy-pr:
-    needs: detect-changes
     if: github.event.pull_request.merged == false && github.event.action == 'closed'
+    needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
         service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
-
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Python and CDK
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt || true
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -131,7 +140,8 @@ jobs:
 
       - name: Destroy PR Preview Stack
         run: |
-          PASCAL_CASE_NAME=$(echo "${{ matrix.service }}" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
+          SERVICE_NAME=${{ matrix.service }}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
           echo "Destroying stack: $STACK_NAME"
           cdk destroy "$STACK_NAME" --force
