--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,34 +18,29 @@ permissions:
   contents: read
 
 jobs:
-  detect-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      changed_services: ${{ steps.set.outputs.changed }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Fetch base branch
-        run: git fetch origin main
-
-      - id: set
-        run: |
-          changed=$(git diff --name-only origin/main...HEAD | \
-            grep -Eo 'services/[^/]+|infra/cdk/stacks/[^/]+' | \
-            cut -d '/' -f2 | \
-            sort -u | \
-            jq -R -s -c 'split("\n") | map(select(length > 0))')
-          echo "changed=$changed" >> $GITHUB_OUTPUT
-
   deploy-pr:
     if: github.event_name == 'pull_request'
-    needs: detect-changes
+    runs-on: ubuntu-latest
+    outputs:
+      changed: ${{ steps.set-changed.outputs.changed }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Get changed services
+        id: set-changed
+        run: |
+          git fetch origin main
+          changed=$(git diff --name-only origin/main...HEAD | grep -Eo 'services/[^/]+|infra/cdk/stacks/[^/]+' | cut -d '/' -f2 | sort -u | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "Changed services: $changed"
+          echo "changed=$changed" >> $GITHUB_OUTPUT
+
+  deploy-changed-stacks:
+    needs: deploy-pr
+    if: ${{ needs.deploy-pr.outputs.changed != '[]' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
+        service: ${{ fromJson(needs.deploy-pr.outputs.changed) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
     steps:
@@ -56,8 +51,23 @@ jobs:
         with:
           python-version: "3.11"
       - run: npm install -g aws-cdk
-      - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt
+
+      - name: Install Infra CDK requirements
+        run: |
+          if [ -f infra/cdk/requirements.txt ]; then
+            pip install -r infra/cdk/requirements.txt
+          else
+            echo "No infra/cdk/requirements.txt found, skipping."
+          fi
+
+      - name: Install Service-specific requirements
+        run: |
+          SERVICE_REQ="services/${{ matrix.service }}/requirements.txt"
+          if [ -f "$SERVICE_REQ" ]; then
+            pip install -r "$SERVICE_REQ"
+          else
+            echo "No $SERVICE_REQ found, skipping."
+          fi
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -70,20 +80,20 @@ jobs:
           SERVICE_NAME=${{ matrix.service }}
           PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
-            --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
+            --app "python3 infra/cdk/stacks/${SERVICE_NAME}/app.py" \
             --context env=pr \
-            --context pr_number=${{ env.PR_NUMBER }} \
+            --context pr_number=${PR_NUMBER} \
             --require-approval never
 
   deploy-prod:
     if: github.ref == 'refs/heads/main'
-    needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
+        service: [user_service, property_service]
     steps:
       - uses: actions/checkout@v4
 
@@ -92,8 +102,23 @@ jobs:
         with:
           python-version: "3.11"
       - run: npm install -g aws-cdk
-      - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt
+
+      - name: Install Infra CDK requirements
+        run: |
+          if [ -f infra/cdk/requirements.txt ]; then
+            pip install -r infra/cdk/requirements.txt
+          else
+            echo "No infra/cdk/requirements.txt found, skipping."
+          fi
+
+      - name: Install Service-specific requirements
+        run: |
+          SERVICE_REQ="services/${{ matrix.service }}/requirements.txt"
+          if [ -f "$SERVICE_REQ" ]; then
+            pip install -r "$SERVICE_REQ"
+          else
+            echo "No $SERVICE_REQ found, skipping."
+          fi
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -106,31 +131,41 @@ jobs:
           SERVICE_NAME=${{ matrix.service }}
           PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-prod"
+
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
-            --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
+            --app "python3 infra/cdk/stacks/${SERVICE_NAME}/app.py" \
             --context env=prod \
             --require-approval never
 
   destroy-pr:
     if: github.event.pull_request.merged == false && github.event.action == 'closed'
-    needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.changed_services) }}
+        service: [user_service, property_service]
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Python and CDK
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
       - run: npm install -g aws-cdk
-      - run: pip install -r infra/requirements.txt
-      - run: pip install -r services/${{ matrix.service }}/requirements.txt
+
+      - name: Install Infra CDK requirements
+        run: |
+          if [ -f infra/cdk/requirements.txt ]; then
+            pip install -r infra/cdk/requirements.txt
+          else
+            echo "No infra/cdk/requirements.txt found, skipping."
+          fi
+
+      - name: Install Service-specific requirements
+        run: |
+          SERVICE_REQ="services/${{ matrix.service }}/requirements.txt"
+          if [ -f "$SERVICE_REQ" ]; then
+            pip install -r "$SERVICE_REQ"
+          else
+            echo "No $SERVICE_REQ found, skipping."
+          fi
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -143,5 +178,6 @@ jobs:
           SERVICE_NAME=${{ matrix.service }}
           PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+
           echo "Destroying stack: $STACK_NAME"
           cdk destroy "$STACK_NAME" --force
